# Retinal-dr-detection

./: .gitignore  LICENSE  PROJECT_PLAN.md  README.md  RetinaScope_AI_Presentation version final.pptx  grading model notebook.ipynb  requirements.txt
data/: README.md
retinascope-ai/backend/: README.md  pyproject.toml
retinascope-ai/backend/app/: __init__.py  config.py  main.py
retinascope-ai/backend/app/api/: routes_chat.py  routes_inference.py
retinascope-ai/backend/app/core/: metrics.py  postprocessing.py  preprocessing.py  visualizer.py
retinascope-ai/backend/app/llm/: __init__.py  client.py  clinical_explainer.py  guardrails.py  vascular_analyst.py
retinascope-ai/backend/app/llm/prompts/: chat_consult.txt  clinical_explainer.txt  vascular_damage_analyst.txt
retinascope-ai/backend/app/models/: __init__.py  calibration.py  grader_cnn.py  lesion_unet.py  registry.py  vessel_unet.py
retinascope-ai/backend/app/schemas/: inference.py  reports.py
webapp/retinascope-ai-v2/backend/: Dockerfile  pyproject.toml  test_e2e.py  test_pipeline.py
webapp/retinascope-ai-v2/backend/app/: __init__.py  config.py  main.py
webapp/retinascope-ai-v2/backend/app/api/: deps.py  routes_chat.py  routes_health.py  routes_inference.py
webapp/retinascope-ai-v2/backend/app/core/: __init__.py  metrics.py  postprocessing.py  preprocessing.py  vessel_analysis.py  visualizer.py
webapp/retinascope-ai-v2/backend/app/llm/: __init__.py  client.py  clinical_explainer.py  guardrails.py  vascular_analyst.py
webapp/retinascope-ai-v2/backend/app/llm/prompts/: chat_consult.txt  clinical_explainer.txt  vascular_damage_analyst.txt
webapp/retinascope-ai-v2/backend/app/models/: calibration.py  grader_cnn.py  registry.py  vessel_unet.py
webapp/retinascope-ai-v2/backend/app/schemas/: inference.py  reports.py
webapp/retinascope-ai-v2/backend/app/utils/: image_io.py
(+146 files in other folders)
