[project]
name = "retinascope-ai-backend"
version = "0.1.0"
description = "FastAPI backend for RetinaScope-AI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "python-multipart>=0.0.9",
  "pillow>=11.0.0",
  "numpy>=2.0.0",
  "opencv-python-headless>=4.10.0",
  "scikit-image>=0.24.0",
  "groq>=0.13.0",
  "google-genai>=1.0.0",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
ml = [
  "torch>=2.4.0",
  "torchvision>=0.19.0",
  "onnxruntime>=1.19.0",
  "timm>=1.0.0",
  "segmentation-models-pytorch>=0.3.4"
]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0"
]

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
