[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retinascope-ai-backend"
version = "2.0.0.dev0"
description = "FastAPI backend for RetinaScope-AI v2"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "numpy>=1.26.0",
  "pillow>=10.0.0",
  "opencv-python-headless>=4.10.0",
  "scikit-image>=0.24.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
ml = [
  "torch>=2.3.0",
  "torchvision>=0.18.0",
  "segmentation-models-pytorch>=0.3.0",
  "timm>=1.0.0",
  "ultralytics>=8.3.0",
]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
